langtools/test/tools/javac/typeAnnotations/failures/common/arrayclass/InvalidLocation.out
InvalidLocation.java:34:23: compiler.err.annotation.type.not.applicable
1 error
